--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9717,3 +9717,8 @@ a.text-dark:hover {
   visibility: hidden !important;
 }
 
+.jumbotron-sm {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
