--- a/resources/assets/sass/app-dark.scss
+++ b/resources/assets/sass/app-dark.scss
@@ -2,7 +2,6 @@
 @import "variables";
 
 // Bootstrap v4 standard grayscale
-$white:  #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -12,89 +11,75 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:  #000 !default;
-
-$grays: (
-  100: $gray-100,
-  200: $gray-200,
-  300: $gray-300,
-  400: $gray-400,
-  500: $gray-500,
-  600: $gray-600,
-  700: $gray-700,
-  800: $gray-800,
-  900: $gray-900,
-  925: mix($gray-900, #000, 75%),
-  950: mix($gray-900, #000),
-) !default;
 
 // Invert the main colors
-$body-bg: map-get($grays, 925);
-$body-color: map-get($grays, 200);
+$body-bg: $gray-900;
+$body-color: $gray-200;
 
 // Invert some other colors
-$jumbotron-bg: map-get($grays, 950);
-$hr-border-color: rgba(map-get($grays, 200), 0.1);
-$progress-bg: map-get($grays, 900);
+$jumbotron-bg: mix($gray-800, $gray-900);
+$hr-border-color: rgba($gray-200, 0.1);
+$progress-bg: $gray-800;
 
 // Darken up inputs
-$input-bg: map-get($grays, 925);
-$input-bg-disabled: map-get($grays, 900);
-$input-color: map-get($grays, 200);
-$input-border-color: rgba(map-get($grays, 200),.15);
+$input-bg: $gray-800;
+$input-disabled-bg: $gray-800;
+$input-color: $gray-200;
+$input-border-color: rgba($gray-200, .15);
 $input-box-shadow: none;
-$input-border-focus: lighten($primary, 25%);
-$input-box-shadow-focus: none;
-$input-group-addon-bg: map-get($grays, 900);
+$input-btn-focus-color: rgba($primary, .5);
+$input-focus-border-color: $primary;
+$input-group-addon-bg: $gray-900;
 
 // Darken secondary buttons
 $btn-secondary-color: #fff;
-$btn-secondary-bg: map-get($grays, 900);
-$btn-secondary-border: map-get($grays, 700);
+$btn-secondary-bg: $gray-900;
+$btn-secondary-border: $gray-700;
 
 // Darken tables
-$table-border-color: lighten(map-get($grays, 900), 15%);
+$table-border-color: lighten($gray-900, 15%);
 
 // Darken cards
-$card-bg: map-get($grays, 950);
-$card-link-hover-color: map-get($grays, 950);
-$card-cap-bg: map-get($grays, 925);
-$card-border-color: rgba(map-get($grays, 200), .25);
+$card-bg: $gray-900;
+$card-link-hover-color: $gray-900;
+$card-cap-bg: $gray-800;
+$card-border-color: rgba($gray-200, .25);
 
 // Darken list groups
-$list-group-bg: map-get($grays, 900);
-$list-group-hover-bg: map-get($grays, 800);
-$list-group-action-color: map-get($grays, 200);
+$list-group-bg: $gray-900;
+$list-group-border-color: rgba($gray-200, .25);
+$list-group-hover-bg: $gray-800;
+$list-group-action-color: $gray-200;
 $list-group-action-hover-color: $list-group-action-color;
 $list-group-action-active-bg: $primary;
 
 // Darken dropdown menus
-$dropdown-bg: map-get($grays, 925);
-$dropdown-link-color: map-get($grays, 200);
-$dropdown-link-hover-bg: map-get($grays, 900);
-$dropdown-link-hover-color: map-get($grays, 200);
-$dropdown-divider-bg: map-get($grays, 700);
+$dropdown-bg: $gray-800;
+$dropdown-link-color: $gray-200;
+$dropdown-link-hover-bg: $gray-700;
+$dropdown-link-hover-color: $gray-200;
+$dropdown-divider-bg: $gray-700;
 
 // Darken modals
-$modal-content-bg: map-get($grays, 925);
-$modal-content-border-color: map-get($grays, 900);
-$modal-header-border-color: map-get($grays, 700);
-$modal-footer-border-color: map-get($grays, 700);
+$modal-content-bg: $gray-900;
+$modal-content-border-color: $gray-800;
+$modal-header-border-color: $gray-700;
+$modal-footer-border-color: $gray-700;
 
 // Darken close button
-$close-color: map-get($grays, 100);
+$close-color: $gray-100;
 $close-text-shadow: 0 1px 0 #000;
 
 // Darken popovers
-$popover-bg: map-get($grays, 925);
-$popover-border-color: rgba(map-get($grays, 600), .25);
+$popover-bg: $gray-900;
+$popover-border-color: rgba($gray-600, .25);
 $popover-title-bg: darken($popover-bg, 3%);
 $popover-arrow-color: $popover-bg;
 
 // Darken breadcrumbs
-$breadcrumb-bg: map-get($grays, 925);
-$breadcrumb-divider-color: map-get($grays, 900);
-$breadcrumb-active-color: map-get($grays, 900);
+$breadcrumb-bg: $gray-900;
+$breadcrumb-divider-color: $gray-800;
+$breadcrumb-active-color: $gray-800;
 
 // Darken custom file input
 $custom-file-bg: $body-bg;
@@ -108,3 +93,6 @@ $link-hover-color: lighten($primary, 10%);
 
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
+
+// Site styles
+@import "site";
