--- a/resources/assets/sass/_site.scss
+++ b/resources/assets/sass/_site.scss
@@ -3,3 +3,7 @@
   padding-top: $jumbotron-padding;
   padding-bottom: $jumbotron-padding;
 }
+
+.line-height-sm {
+  line-height: $line-height-base-sm;
+}
