--- a/app/view/kanban/index.html
+++ b/app/view/kanban/index.html
@@ -5,18 +5,31 @@
     <style type="text/css">
         .kanban-board {
             display: flex;
+            transition: opacity 0.2s ease;
+        }
+        .kanban-board.is-loading {
+            opacity: 0.8;
+            pointer-events: none;
         }
         .kanban-swimlane {
             margin: 0 0 15px 15px;
             width: 280px;
-            min-width: 200px;
+            min-width: 230px;
         }
         .kanban-swimlane:last-child {
             margin-right: 15px;
         }
         .kanban-swimlane > .panel-body {
+            min-height: calc(80vh - 160px);
             max-height: calc(100vh - 160px);
             overflow-y: auto;
+        }
+        .kanban-swimlane > .panel-body > div:empty {
+            min-height: calc(80vh - 160px);
+        }
+        .kanban-issue {
+            margin-bottom: 15px;
+            cursor: move;
         }
     </style>
 </head>
@@ -40,6 +53,8 @@
             <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17"></script>
         </false>
     </check>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.15.0/vuedraggable.min.js"></script>
     <script type="text/javascript" src="{{ @BASE }}/js/kanban.js"></script>
 </body>
 </html>
