Add owner task colors to Kanban board

--- a/app/view/kanban/index.html
+++ b/app/view/kanban/index.html
@@ -29,6 +29,7 @@
         }
         .kanban-issue {
             margin-bottom: 15px;
+            border-left-width: 4px;
             cursor: move;
         }
     </style>
