--- a/app/view/backlog/index.html
+++ b/app/view/backlog/index.html
@@ -100,9 +100,14 @@
                                     <a class="{{ @key ? 'collapsed' : '' }}" data-toggle="collapse" href="#panel-{{ @sprint.id }}">
                                         {{ @sprint.name }} &mdash; {{ date('n/j', strtotime(@sprint.start_date)) }}-{{ date('n/j', strtotime(@sprint.end_date)) }}
                                     </a>
-                                    <a href="{{ @BASE }}/taskboard/{{ @sprint.id }}" data-base-href="{{ @BASE }}/taskboard/{{ @sprint.id }}" class="sprint-board btn btn-default btn-xs pull-right">
-                                        <span class="fa fa-list"></span> {{ @dict.taskboard }}
-                                    </a>
+                                    <span class="pull-right">
+                                        <a href="{{ @BASE }}/kanban/{{ @sprint.id }}" data-base-href="{{ @BASE }}/kanban/{{ @sprint.id }}" class="kanban-board btn btn-default btn-xs">
+                                            <span class="fa fa-bars fa-rotate-90"></span> Kanban
+                                        </a>
+                                        <a href="{{ @BASE }}/taskboard/{{ @sprint.id }}" data-base-href="{{ @BASE }}/taskboard/{{ @sprint.id }}" class="scrum-board btn btn-default btn-xs">
+                                            <span class="fa fa-list"></span> Scrum
+                                        </a>
+                                    </span>
                                 </div>
                                 <div class="panel-body {{ @key ? 'collapse' : 'in' }}" id="panel-{{ @sprint.id }}">
                                     <div class="panel-head-points text-muted">
